# Sermon_Slides_Generator

./: .gitignore  BUILD.md  LICENSE  PORTFOLIO_TODO.md  README.md  build.py  church-slides-icon.icns  main.py  pyproject.toml  sermon_slides.spec  sermon_slides_generator.py  sermon_slides_gui.py  test.html  test.txt
.github/workflows/: ci.yml
Passages/: short.txt  test.txt
templates/: index.html
tests/: test_passage_fetching.py  test_text_splitting.py
tests/fixtures/: john_3_16_17.html  no_results.html  psalm_23.html
